--- a/vscode/.eslintrc.yml
+++ b/vscode/.eslintrc.yml
@@ -1,4 +1,22 @@
-extends:
-  - '@antfu'
+root: true
+parser: "@typescript-eslint/parser"
+parserOptions:
+  ecmaVersion: 2020
+  sourceType: module
 rules:
   no-console: off
+  curly: error
+  eqeqeq: warn
+  no-throw-literal: warn
+  semi: off
+  quotes:
+    - error
+    - double
+  "@typescript-eslint/no-non-null-assertion": off
+  "@typescript-eslint/semi": error
+extends:
+  - eslint:recommended
+  - plugin:@typescript-eslint/recommended
+  - prettier
+ignorePatterns: ["out", "dist", "**/*.d.ts"]
+
