--- a/vscode/.vscode/launch.json
+++ b/vscode/.vscode/launch.json
@@ -7,6 +7,7 @@
       "request": "launch",
       "runtimeExecutable": "${execPath}",
       "args": [
+        "/Users/tami5/repos/swift/wordle",
         "--extensionDevelopmentPath=${workspaceFolder}"
       ],
       "outFiles": [
