--- a/vscode/package.json
+++ b/vscode/package.json
@@ -56,8 +56,7 @@
     "publish": "vsce publish --no-dependencies",
     "pack": "vsce package --no-dependencies",
     "test": "vitest",
-    "typecheck": "tsc --noEmit",
-    "release": "bumpp --commit --push --tag && nr publish"
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@antfu/ni": "^0.16.2",
@@ -67,13 +66,10 @@
     "@types/vscode": "^1.68.0",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
-    "bumpp": "^7.1.1",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.3.0",
-    "esno": "^0.16.3",
     "pnpm": "^7.1.9",
     "prettier": "2.5.1",
-    "rimraf": "^3.0.2",
     "tsup": "^6.1.0",
     "typescript": "^4.7.3",
     "vite": "^2.9.11",
