--- a/vscode/package.json
+++ b/vscode/package.json
@@ -55,13 +55,11 @@
     "vscode:prepublish": "nr build",
     "publish": "vsce publish --no-dependencies",
     "pack": "vsce package --no-dependencies",
-    "test": "vitest",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@antfu/ni": "^0.16.2",
     "@babel/types": "^7.18.4",
-    "@sniptt/monads": "^0.5.10",
     "@types/node": "^17.0.41",
     "@types/vscode": "^1.68.0",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
@@ -73,7 +71,9 @@
     "tsup": "^6.1.0",
     "typescript": "^4.7.3",
     "vite": "^2.9.11",
-    "vitest": "^0.14.1",
     "vsce": "^2.9.1"
+  },
+  "dependencies": {
+    "tiny-glob": "^0.2.9"
   }
 }
