--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "xbase"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 default-run = "xbase"
 
@@ -61,6 +61,9 @@ typescript-definitions = { git = "https://github.com/onelson/typescript-definiti
 
 [workspace]
 members = [ "crates/*" ]
+[features]
+default = []
+gen = []
 
 [dev-dependencies]
 tracing-test = "0.2.2"
