chore(core): only generate bindings on feature=gen

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,9 @@ typescript-definitions = { git = "https://github.com/onelson/typescript-definiti
 
 [workspace]
 members = [ "crates/*" ]
+[features]
+default = []
+gen = []
 
 [dev-dependencies]
 tracing-test = "0.2.2"
