feat(vscode): toggle logger

--- a/vscode/package.json
+++ b/vscode/package.json
@@ -44,6 +44,10 @@
       {
         "command": "xbase.watch",
         "title": "XBase: Watch"
+      },
+      {
+        "command": "xbase.toggleLogger",
+        "title": "XBase: Toggle Logger"
       }
     ]
   },
