--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,7 +57,9 @@ signal-hook           = { version = "0.3.14"  }
 signal-hook-tokio     = { version = "0.3.1", features = ["futures-v0_3"] }
 
 # types generators
-typescript-definitions = { git = "https://github.com/onelson/typescript-definitions", branch = "no-debug-attrs"}
+# typescript-type-def = { version = "0.5.3", features = ["json_value"] }
+typescript-type-def = { git = "https://github.com/kkharji/rust-typescript-type-def", branch = "feat/replace_deprecated_functions_and_impl_pathbuf" , features = ["json_value"] }
+
 
 [workspace]
 members = [ "crates/*" ]
